# TerminalEngine

./: CMakeLists.txt  README.md  build.bat
includes/: Camera.h  Chunks.h  EngineInput.h  Renderer.h  Sprite.h  _3dFunctions.h  consoleTerminal.h
res/textures/: font.txt  grass.txt  none.txt  stone.txt  texturePSD.psd
src/: Camera.cpp  Draw3d.cpp  DrawBasics.cpp  Engine.cpp  EngineInput.cpp  Renderer.cpp  Sprite.cpp  _3dFunctions.cpp  consoleTerminal.cpp  main.cpp
